# quickcov_rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: args.rs  errors.rs  main.rs
src/engine/: classifier.rs  index.rs  mod.rs  pipeline.rs
