[package]
name = "quickcov_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
rayon = { version = "1.12.0" }
rstest = { version = "0.26.1" }
clap = { version = "4.6.1", features = ["derive"] }
log = { version = "0.4.29" }
simple_logger = { version = "5.0.0" }
bio = { version = "3.0.0" }
flate2 = { version = "1.1.5" }
rand = { version = "0.10.1" }
fixedbitset = { version = "0.5.7" }
dashmap = { version = "6.2.1" }
rustc-hash = { version = "2.1.1" }
indicatif = { version = "0.18.3" }
thiserror = { version = "2.0.18" }
bio_utils_rs = { version = "0.0.2", features = ["io"] }
packed-seq = "4.4.2"
simd-minimizers = "2.3.1"
